[gd_scene load_steps=18 format=2]

[ext_resource path="res://Levels/Level Resources/scene_batcher/entity_spawns/entity_spawns.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level Resources/world_tiles/world_tiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/level_completed/level_completed.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level Resources/background/background.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/health_ui/health_ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/item_bar/item_bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/item_info/item_info.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level Resources/camera/camera.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/pause_menu/pause_menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/Level Resources/scene_batcher/prop_placer/prop_placer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/Level Resources/background_tiles/background_tiles.tscn" type="PackedScene" id=11]
[ext_resource path="res://Levels/level/level.gd" type="Script" id=12]
[ext_resource path="res://UI/stopwatch/stopwatch.tscn" type="PackedScene" id=13]
[ext_resource path="res://UI/transition.tscn" type="PackedScene" id=14]
[ext_resource path="res://Levels/level/leaf.png" type="Texture" id=15]
[ext_resource path="res://UI/vignette/vignette.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/fps/fps.tscn" type="PackedScene" id=17]

[node name="level" type="Navigation2D"]
pause_mode = 2
z_index = 5
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" parent="." instance=ExtResource( 4 )]
pause_mode = 1
show_behind_parent = true

[node name="ambient_lighting" type="CanvasModulate" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 1

[node name="health_ui" parent="CanvasLayer" instance=ExtResource( 5 )]
show_behind_parent = true

[node name="item_bar" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = true

[node name="item_info" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = true

[node name="stopwatch" parent="CanvasLayer" instance=ExtResource( 13 )]
visible = true
margin_bottom = 24.0

[node name="pause_menu" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="level_completed" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="transition" parent="CanvasLayer" instance=ExtResource( 14 )]

[node name="fps" parent="CanvasLayer" instance=ExtResource( 17 )]

[node name="vignette" parent="CanvasLayer" instance=ExtResource( 16 )]

[node name="Camera" parent="." instance=ExtResource( 8 )]
pause_mode = 1

[node name="prop_placer" parent="." instance=ExtResource( 10 )]
z_index = 201
bake_navigation = true

[node name="YSort" type="YSort" parent="."]
pause_mode = 1
show_behind_parent = true
z_index = 200
__meta__ = {
"_edit_lock_": true
}

[node name="background_tiles" parent="YSort" instance=ExtResource( 11 )]
bake_navigation = true

[node name="entity_spawns" parent="YSort" instance=ExtResource( 1 )]
bake_navigation = true

[node name="world_tiles" parent="YSort" instance=ExtResource( 2 )]
bake_navigation = true

[node name="nav" parent="YSort/world_tiles" index="0"]
bake_navigation = true

[node name="low_walls" parent="YSort/world_tiles" index="1"]
bake_navigation = true

[node name="particle_anchor" type="Node2D" parent="."]
pause_mode = 1

[node name="particles" type="Particles2D" parent="particle_anchor"]
z_index = 999
amount = 100
lifetime = 18.0
preprocess = 15.0
visibility_rect = Rect2( -9900, -9900, 19800, 19800 )
local_coords = false
texture = ExtResource( 15 )

[editable path="YSort/world_tiles"]
